[gd_scene load_steps=2 format=3 uid="uid://bktm5n78lykm2"]

[ext_resource type="Script" uid="uid://cbdynvf18812r" path="res://Scenes/game_over_screen.gd" id="1_d4r0f"]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_d4r0f")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.129558, 0.129558, 0.129558, 1)

[node name="Title" type="Label" parent="."]
offset_left = 450.0
offset_top = 40.0
offset_right = 791.0
offset_bottom = 153.0
theme_override_font_sizes/font_size = 40
text = "Game completed!
Congratulations"
horizontal_alignment = 1

[node name="Kills" type="Label" parent="."]
offset_left = 510.0
offset_top = 194.0
offset_right = 669.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="LevelTime" type="Label" parent="."]
offset_left = 254.0
offset_top = 249.0
offset_right = 413.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="TotalTime" type="Label" parent="."]
offset_left = 727.0
offset_top = 249.0
offset_right = 886.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Stamina" type="Label" parent="."]
offset_left = 753.0
offset_top = 395.0
offset_right = 912.0
offset_bottom = 439.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Attack" type="Label" parent="."]
offset_left = 521.0
offset_top = 395.0
offset_right = 680.0
offset_bottom = 439.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Health" type="Label" parent="."]
offset_left = 278.0
offset_top = 395.0
offset_right = 437.0
offset_bottom = 439.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Quit" type="Button" parent="."]
offset_left = 655.0
offset_top = 515.0
offset_right = 830.0
offset_bottom = 564.0
text = "Quit"

[node name="BackToMenu" type="Button" parent="."]
offset_left = 341.0
offset_top = 516.0
offset_right = 514.0
offset_bottom = 564.0
text = "Back to menu"

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="BackToMenu" to="." method="_on_back_to_menu_pressed"]
